tests/invalid-use/since-1-49/two_lifetimes_on_dependant.stderr
error: 2 lifetimes on `MyStruct` when only a single is valid on a `zc::Dependant`
 --> $DIR/two_lifetimes_on_dependant.rs:4:20
  |
4 | pub struct MyStruct<'a, 'b>(&'a (), &'b ());
  |                    ^^^^^^^^
